--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,6 @@
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/main_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/standard_margin">
+        android:padding="@dimen/standard_margin2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_margin="@dimen/standard_margin2"
             android:text="Login"
             android:textStyle="italic"
             android:typeface="serif"
@@ -28,7 +27,7 @@
             android:id="@+id/phone_number_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_margin="@dimen/standard_margin2"
             android:layout_gravity="center"
             android:hint="phone number"
             android:padding="8dp" />
@@ -37,7 +36,7 @@
             android:id="@+id/password_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_margin="@dimen/standard_margin2"
             android:layout_gravity="center"
             android:hint="password"
             android:inputType="textPassword"
@@ -47,7 +46,7 @@
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_margin="@dimen/standard_margin2"
             android:layout_gravity="center"
             android:background="@drawable/text_input_border"
             android:textColor="@color/textColorPrimary"
