--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,74 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/main_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/standard_margin">
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_margin="@dimen/standard_margin2"
             android:text="Create Account"
             android:textColor="@color/colorPrimaryDark"
-            android:typeface="serif"
-            android:textSize="30sp" />
+            android:textSize="30dp"
+            android:typeface="serif" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="phone number"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"/>
 
         <EditText
             android:id="@+id/phone_number_box2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
             android:layout_gravity="center"
-            android:hint="phone number"/>
+            android:layout_marginTop="@dimen/standard_margin1"
+            android:layout_marginBottom="@dimen/standard_margin1"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"
+            android:hint="09121234567" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="password"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"/>
 
         <EditText
             android:id="@+id/password_box2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
             android:layout_gravity="center"
-            android:hint="password"
-            android:inputType="textPassword"/>
+            android:layout_marginTop="@dimen/standard_margin1"
+            android:layout_marginBottom="@dimen/standard_margin1"
+            android:layout_marginLeft="@dimen/standard_margin2"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="confirm password"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"/>
 
         <EditText
             android:id="@+id/confirm_Password_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
             android:layout_gravity="center"
-            android:hint="confirm password"
-            android:inputType="textPassword"/>
+            android:layout_marginTop="@dimen/standard_margin1"
+            android:layout_marginBottom="@dimen/standard_margin1"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="email"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"/>
 
         <EditText
             android:id="@+id/email_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
             android:layout_gravity="center"
-            android:hint="email"
-            android:inputType="textEmailAddress"/>
+            android:hint="email@gmail.com"
+            android:layout_marginTop="@dimen/standard_margin1"
+            android:layout_marginBottom="@dimen/standard_margin1"
+            android:layout_marginLeft="@dimen/standard_margin2"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:inputType="textEmailAddress" />
 
-        <Button
-            android:id="@+id/register_button"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="city"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2"/>
+
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
-            android:text="Create account"
-            android:background="@drawable/text_input_border"
-            android:textColor="@color/textColorPrimary"
-            android:layout_gravity="center"/>
+            android:layout_marginTop="@dimen/standard_margin1"
+            android:layout_marginBottom="@dimen/standard_margin1"
+            android:layout_marginRight="@dimen/standard_margin2"
+            android:layout_marginLeft="@dimen/standard_margin2" />
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+
+           <Button
+               android:id="@+id/register_button"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/text_input_border"
+               android:layout_marginRight="@dimen/standard_margin2"
+               android:layout_marginLeft="@dimen/standard_margin2"
+               android:layout_marginTop="@dimen/standard_margin3"
+               android:text="Create account"
+               android:textColor="@color/textColorPrimary" />
+
+       </LinearLayout>
 
 
     </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
