--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_margin1">10dp</dimen>
+    <dimen name="standard_margin2">16dp</dimen>
+    <dimen name="standard_margin3">70dp</dimen>
 </resources>
